# cmake-cpack-example

./: CMakeLists.txt  README.md  main.cpp
cmake/: Installing.cmake  InstallingConfigs.cmake  InstallingGeneral.cmake  Packing.cmake
libraries/: CMakeLists.txt
libraries/AnotherLibrary/: CMakeLists.txt  Config.cmake.in  README.md
libraries/AnotherLibrary/cmake/: Installing.cmake  Packing.cmake
libraries/AnotherLibrary/include/: another.h
libraries/AnotherLibrary/src/: another.cpp  things.h
libraries/SomeLibrary/: CMakeLists.txt
libraries/SomeLibrary/cmake/: Installing.cmake  Packing.cmake
libraries/SomeLibrary/include/: some.h
